deploy/ipmapper/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ipmapper-deployment
spec:
  replicas: 1 # this should always be 1
  template:
    metadata:
      labels:
        app: ipmapper
    spec:
      containers:
      - name: ipmapper-container
        image: jaymell/ipmapper:latest
        #args: []
        ports:
        - name: http
          containerPort: 8080
