deploy/ipmapper/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ipmapper-ingress
spec:
  rules:
  - host: ipmapper.jaymell.com
  backend:
    serviceName: ipmapper-service
    servicePort: 80
